# naijavibecheck

./: .env.example  .gitignore  CLAUDE_CODE_PROMPT.md  NAIJAVIBECHECK_ADDENDUM.md  NEW_FEATURES_QUICKREF.md  PROJECT_CHECKLIST.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  browser_login.py  compare_quality.py  compare_quality_standalone.py  final_quality_comparison.py  pyproject.toml  requirements.txt  run_full_analysis.py  test_comments.py  test_cost_effective_pipeline.py  test_full_pipeline.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: analysis.py  analytics.py  celebrities.py  content.py  discovery.py  generate.py  health.py  posts.py  publish.py  (+1 more)
backend/app/models/: __init__.py  analysis.py  celebrity.py  comment.py  engagement.py  generated_content.py  post.py  settings.py
backend/app/schemas/: __init__.py  analysis.py  celebrity.py  comment.py  content.py  post.py
backend/app/services/: __init__.py  database_storage.py  vibe_check_pipeline.py
backend/app/utils/: __init__.py  nigerian_context.py  text_processing.py
backend/app/workers/: analysis_tasks.py  celery_app.py  generation_tasks.py  publishing_tasks.py  scraping_tasks.py
backend/scripts/: seed_test_data.py
backend/sessions/: .gitkeep
backend/test_output/: caption.txt
backend/tests/: __init__.py  conftest.py  test_analysis.py  test_api.py  test_generator.py  test_publisher.py  test_utils.py
(+69 files in other folders)
